--- a/src/sharedComponents/ui/Inputs/Input.module.scss
+++ b/src/sharedComponents/ui/Inputs/Input.module.scss
@@ -4,97 +4,137 @@
     border-radius: 14px;
     display: flex;
     flex-direction: row;
-    align-items: center;
-    margin-top: 20px;
-    margin-bottom: 20px;
+    justify-content: center;
     padding: 10px;
-    height: 30px;
+    align-items: stretch;
+    cursor: text;
+
+    .rowStartIcon{
+        vertical-align: middle;
+        padding: 5px;
+    }
+
+    
+    .inputBlock {
+        display: flex;
+        flex-direction: column;
+        flex-grow: 1;
+    
+        .htmlInputBlock{
+            display: flex;
+            flex-direction: row;
+            align-items: center;
+            justify-content: space-between;
+            overflow: hidden;
+            box-sizing: border-box;
+            
+   
+        
+            .uploadPhotoLabel{
+                margin-top: 7px;
+                cursor: pointer;
+            }
+        
+            .htmlInput {
+                flex-grow: 1;
+                height: 22px;
+                background: rgba(255, 255, 255, 0);
+                border: none;
+                outline: none;
+                // font-size: var(--fontSize);
+                color: var(--primary-text);
+            }
+        
+        }
+
+        .dateDiv{
+            position: relative;
+        
+            .htmlInputDate {
+                width: 100%;
+                height: 22px;
+                background: rgba(255, 255, 255, 0);
+                border: none;
+                outline: none;
+                // font-size: var(--fontSize);
+                color: var(--primary-text);
+            }
+        
+            .clear{
+                cursor: pointer;
+                position: absolute;
+                right: 25px;
+                top: 10px;
+            }
+        }
+        
+        .htmlInputText {
+            position: absolute;
+            margin-top: -22px;
+            font-weight: 500;
+            // font-size: var(--fontSize);
+            color: var(--primary-text);
+            pointer-events: none;
+        }
+    
+    }
+    .inputBlockFile{
+        margin-top: -7px;
+    }
+    
+    .img{
+        margin-left: 10px;
+        width: 50px;
+        height: 50px;
+    
+        img {
+            width: inherit;
+            border-radius: 10px;
+        }
+    }
+
+    .button {
+        border: none;
+        outline: none;
+        height: max-content;
+        background: rgba(255, 255, 255, 0);
+        font-size:var(--fontSizeSmall);
+        color: var(--primary-text);
+        cursor: pointer;
+    
+        .icon {
+            vertical-align: middle;
+        }
+    }
 }
 
-.required{
-   color: var(--primary);
-//    font-size: var(--fontSizeSmall);
-}
 
-input[type=file] {
-    display: none;
-}
-
-.disabled {
-    background-color: var(--main-bg-color) !important;
-    border: 1px solid var(--main-bg-color) !important;
-}
-
-.small {
-    width: 138px;
-}
-
-.smaller {
-    width: 85px;
-}
-
-.medium {
-    width: 278px;
-}
-
-.big {
-    width: 368px;
-}
-
-.bigger {
+input{
     width: 100%;
 }
 
-.inputBlock {
-    display: flex;
-    flex-direction: column;
-    flex-grow: 1;
+textarea {
+    resize: none !important;
+    // display: flex;
 }
 
-// .inputLabel {
-//     font-size: var(--fontSizeSmall);
-//     color: var(--light-text);
+
+// textarea::placeholder {
+//     height: inherit;
+// }
+ 
+// textarea::-ms-input-placeholder {
+//     // text-align: center;
 // }
 
-
-.htmlInput {
-    flex-grow: 1;
-    height: 22px;
-    background: rgba(255, 255, 255, 0);
-    border: none;
-    outline: none;
-    // font-size: var(--fontSize);
-    color: var(--primary-text);
-
-}
-
-.htmlInputDate {
-    width: 100%;
-    height: 22px;
-    background: rgba(255, 255, 255, 0);
-    border: none;
-    outline: none;
-    // font-size: var(--fontSize);
-    color: var(--primary-text);
-
+.input input[type="number"] {
+    text-align: center;
 }
 
 .input input[type="date"] {
     position: relative;
     color: rgba(255, 255, 255, 0);
 }
-
-// .input input[type="date"]::-webkit-calendar-picker-indicator {
-//     position: absolute;
-//     top: 0;
-//     left: 0;
-//     right: 0;
-//     bottom: 0;
-//     width: auto;
-//     height: auto;
-//     color: transparent;
-//     background: transparent;
-// }
 
 .input input[type=date]::-webkit-datetime-edit-text {
     -webkit-appearance: none;
@@ -116,75 +156,21 @@ input[type=file] {
     display: none;
 }
 
-.htmlInputText {
-    position: absolute;
-    margin-top: -22px;
-    font-weight: 500;
-    // font-size: var(--fontSize);
-    color: var(--primary-text);
+.required{
+    color: var(--primary);
+ //    font-size: var(--fontSizeSmall);
+ }
+ 
+ input[type=file] {
+     display: none;
+ }
+ 
+ .disabled {
+     background-color: var(--main-bg-color) !important;
+     border: 1px solid var(--main-bg-color) !important;
+ }
 
-    pointer-events: none;
-}
 
-.dateDiv{
-    position: relative;
-    .clear{
-        cursor: pointer;
-        position: absolute;
-        right: 25px;
-        top: 10px;
-    }
-}
 
-.button {
-    border: none;
-    outline: none;
-    height: max-content;
-    background: rgba(255, 255, 255, 0);
-    font-size:var(--fontSizeSmall);
-    color: var(--primary-text);
-    cursor: pointer;
-}
 
-.icon {
-    vertical-align: middle;
-}
 
-.rowStartIcon{
-    vertical-align: middle;
-    padding: 5px;
-}
-
-.htmlInputBlock{
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: space-between;
-
-    
-    box-sizing: border-box;
-    
-    span{
-        margin-top: 7px;
-        margin-left: 5px;
-    }
-}
-
-.uploadPhotoLabel{
-    margin-top: 7px;
-    cursor: pointer;
-}
-.inputBlockFile{
-    margin-top: -7px;
-}
-
-.img{
-    margin-left: 10px;
-    width: 50px;
-    height: 50px;
-
-    img {
-        width: inherit;
-        border-radius: 10px;
-    }
-}
