--- a/src/app/styles/variables/global.scss
+++ b/src/app/styles/variables/global.scss
@@ -18,7 +18,7 @@
     --selected-bg-color: #ffeeee;
     --dark-bg-color: #d3d3d3;
 
-    // --overlay-bg-color: #0000006b;
+    --overlay-bg-color: #0000006b;
     // --login-modal-bg-color: #f6f6f6;
 
     --btn-active: #000000;
@@ -36,8 +36,8 @@
     --fontSizeSmall: 16px;
     --mainPageMargin: 10px;
 
-    // --modal-z-index: 10000;
-    // --overlay-z-index: 1000;
+    --modal-z-index: 10000;
+    --overlay-z-index: 1000;
 
     --mainFontFamily: 'Muli';
 }
