--- a/src/sharedComponents/ui/Modal/Modal.module.scss
+++ b/src/sharedComponents/ui/Modal/Modal.module.scss
@@ -16,6 +16,9 @@
   z-index: var(--modal-z-index);
   width: 100%;
   height: 100%;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
 }
 .opened {
   pointer-events: auto;
