--- a/src/sharedComponents/ui/Overlay/Overlay.module.scss
+++ b/src/sharedComponents/ui/Overlay/Overlay.module.scss
@@ -1,5 +1,5 @@
 .Overlay {
-    background: var(--bg-secondary-color);
+    background: var(--secondary-bg-color);
     display: flex;
     position: fixed;
     top: 0;
