--- a/src/sharedComponents/ui/Inputs/Input.module.scss
+++ b/src/sharedComponents/ui/Inputs/Input.module.scss
@@ -1,176 +1,190 @@
 .input {
-    background: rgba(255, 255, 255, 0);
-    border: 1px solid var(--borderColor);
-    border-radius: 14px;
+  background: rgba(255, 255, 255, 0);
+  border: 1px solid var(--borderColor);
+  border-radius: 14px;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  padding: 10px;
+  align-items: stretch;
+  cursor: text;
+
+  .rowStartIcon {
+    vertical-align: middle;
+    padding: 5px;
+  }
+
+  .inputBlock, .inputBlockTextArea {
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     justify-content: center;
-    padding: 10px;
-    align-items: stretch;
-    cursor: text;
+    align-items: center;
+    flex-grow: 1;
 
-    .rowStartIcon{
-        vertical-align: middle;
-        padding: 5px;
-    }
+    .htmlInputBlock, .htmlInputBlockTextArea{
+      display: flex;
+      flex-direction: row;
+      align-items: center;
+      justify-content: space-between;
+      overflow: hidden;
+      box-sizing: border-box;
 
-    
-    .inputBlock {
-        display: flex;
-        flex-direction: column;
+      .uploadPhotoLabel {
+        margin-top: 7px;
+        cursor: pointer;
+      }
+
+      .htmlInput {
         flex-grow: 1;
-    
-        .htmlInputBlock{
-            display: flex;
-            flex-direction: row;
-            align-items: center;
-            justify-content: space-between;
-            overflow: hidden;
-            box-sizing: border-box;
-            
-   
-        
-            .uploadPhotoLabel{
-                margin-top: 7px;
-                cursor: pointer;
-            }
-        
-            .htmlInput {
-                flex-grow: 1;
-                height: 22px;
-                background: rgba(255, 255, 255, 0);
-                border: none;
-                outline: none;
-                // font-size: var(--fontSize);
-                color: var(--primary-text);
-            }
-        
-        }
-
-        .dateDiv{
-            position: relative;
-        
-            .htmlInputDate {
-                width: 100%;
-                height: 22px;
-                background: rgba(255, 255, 255, 0);
-                border: none;
-                outline: none;
-                // font-size: var(--fontSize);
-                color: var(--primary-text);
-            }
-        
-            .clear{
-                cursor: pointer;
-                position: absolute;
-                right: 25px;
-                top: 10px;
-            }
-        }
-        
-        .htmlInputText {
-            position: absolute;
-            margin-top: -22px;
-            font-weight: 500;
-            // font-size: var(--fontSize);
-            color: var(--primary-text);
-            pointer-events: none;
-        }
-    
-    }
-    .inputBlockFile{
-        margin-top: -7px;
-    }
-    
-    .img{
-        margin-left: 10px;
-        width: 50px;
-        height: 50px;
-    
-        img {
-            width: inherit;
-            border-radius: 10px;
-        }
-    }
-
-    .button {
+        height: 22px;
+        background: rgba(255, 255, 255, 0);
         border: none;
         outline: none;
-        height: max-content;
-        background: rgba(255, 255, 255, 0);
-        font-size:var(--fontSizeSmall);
+        // font-size: var(--fontSize);
         color: var(--primary-text);
-        cursor: pointer;
-    
-        .icon {
-            vertical-align: middle;
-        }
+      }
     }
+
+    .htmlInputBlockTextArea{
+      align-self: start;
+    }
+    .dateDiv {
+      position: relative;
+      width: 9rem;
+
+      .htmlInputDate {
+        width: 100%;
+        height: 22px;
+        background: rgba(255, 255, 255, 0);
+        border: none;
+        outline: none;
+        // font-size: var(--fontSize);
+        color: var(--primary-text);
+      }
+
+      .clear {
+        cursor: pointer;
+        position: absolute;
+        right: 25px;
+        top: 10px;
+      }
+    }
+
+    .htmlInputText {
+      position: absolute;
+      margin-top: -22px;
+      font-weight: 500;
+      // font-size: var(--fontSize);
+      color: var(--primary-text);
+      pointer-events: none;
+    }
+  }
+
+  inputBlockTextArea{
+    justify-content: flex-start ;
+    align-items: flex-start;
+  }
+  .inputBlockFile {
+    margin-top: -7px;
+  }
+
+  .img {
+    margin-left: 10px;
+    width: 50px;
+    height: 50px;
+
+    img {
+      width: inherit;
+      border-radius: 10px;
+    }
+  }
+
+  .button {
+    border: none;
+    outline: none;
+    height: max-content;
+    background: rgba(255, 255, 255, 0);
+    font-size: var(--fontSizeSmall);
+    color: var(--primary-text);
+    cursor: pointer;
+    display: flex;
+    align-self: center;
+
+    span {
+      display: flex;
+      align-self: center;
+    }
+
+    .icon {
+      vertical-align: middle;
+    }
+  }
 }
 
-
-input{
-    width: 100%;
+input {
+  width: 100%;
 }
 
 textarea {
-    resize: none !important;
-    // display: flex;
+  resize: none !important;
+  // display: flex;
 }
-
 
 // textarea::placeholder {
 //     height: inherit;
 // }
- 
+
 // textarea::-ms-input-placeholder {
 //     // text-align: center;
 // }
 
 .input input[type="number"] {
-    text-align: center;
+  text-align: center;
 }
 
 .input input[type="date"] {
-    position: relative;
-    color: rgba(255, 255, 255, 0);
+  position: relative;
+  color: rgba(255, 255, 255, 0);
 }
 
-.input input[type=date]::-webkit-datetime-edit-text {
-    -webkit-appearance: none;
-    display: none;
+input::-webkit-calendar-picker-indicator{
+  display: none;
 }
 
-.input input[type=date]::-webkit-datetime-edit-month-field {
-    -webkit-appearance: none;
-    display: none;
+input[type="date"]::-webkit-input-placeholder{ 
+  visibility: hidden !important;
 }
 
-.input input[type=date]::-webkit-datetime-edit-day-field {
-    -webkit-appearance: none;
-    display: none;
+.input input[type="date"]::-webkit-datetime-edit-text {
+  -webkit-appearance: none;
+  display: none;
 }
 
-.input input[type=date]::-webkit-datetime-edit-year-field {
-    -webkit-appearance: none;
-    display: none;
+.input input[type="date"]::-webkit-datetime-edit-month-field {
+  -webkit-appearance: none;
+  display: none;
 }
 
-.required{
-    color: var(--primary);
- //    font-size: var(--fontSizeSmall);
- }
- 
- input[type=file] {
-     display: none;
- }
- 
- .disabled {
-     background-color: var(--main-bg-color) !important;
-     border: 1px solid var(--main-bg-color) !important;
- }
+.input input[type="date"]::-webkit-datetime-edit-day-field {
+  -webkit-appearance: none;
+  display: none;
+}
 
+.input input[type="date"]::-webkit-datetime-edit-year-field {
+  -webkit-appearance: none;
+  display: none;
+}
 
+.required {
+  color: var(--primary);
+  //    font-size: var(--fontSizeSmall);
+}
 
+input[type="file"] {
+  display: none;
+}
 
-
+.disabled {
+  background-color: var(--main-bg-color) !important;
+  border: 1px solid var(--main-bg-color) !important;
+}
